  * reportbug/ui/urwid_ui.py
    - when retrieving a string, also show a default text (if preset), useful in
      particular with --configure to see the current values for realname and
      email; thanks to Andrei Popescu for the report; Closes: #526631
    - clarified the menu showing bugs already present, changing the title and
      the buttons; thanks to Nick for the report; Closes: #462614

 -- Sandro Tosi <morph@debian.org>  Sun, 03 Jan 2010 20:10:03 +0100

reportbug (4.9) unstable; urgency=low

  [ Sandro Tosi ]
  * debian/rules
    - check if versions are in sync only when releasing (allowing for easier
      development)
  * reportbug/ui/gtk2_ui.py
    - replace python-gnome2-extras with python-gtkspell when suggesting what
      package to install for spell checking; thanks to David Steiner for the
      report; Closes: #551046
    - clarified the dialog message that requires installation of additional
      packages; thanks to Filipus Klutiero for the report; Closes: #554589
  * debian/control
    - added a Conflicts on 'debsums (<< 2.0.47)', to properly require the
      correct version of debsums; thanks to Flavio Stanchina for the report;
      Closes: #552364
  * reportbug/ui/urwid_ui.py
    - added missing arguments to handle_bts_query call; thanks to David Bremner
      for the report; Closes: #542309
  * reportbug/submit.py
    - don't encode email addresses when print report of mail recipients (after
      mail being sent); thanks to Raphaël Hertzog for the report and Carl Chenet
      for the patch; Closes: #546914
  * bin/querybts
    - enable '-u' options, along with '--ui'; thanks to David Bremner for the
      report and to Carl Chenet for the patch; Closes: #542312
  * bin/reportbug
    - '--template' option forces the 'text' UI (it's only useful with that);
      thanks to Johan Kullstam for the report; Closes: #543281
    - clarified the message displayed when reporting a bug against an orphaned