@@ -43,8 +43,13 @@ reportbug (4.10~WIP) UNRELEASED; urgency=low
       email; thanks to Andrei Popescu for the report; Closes: #526631
     - clarified the menu showing bugs already present, changing the title and
       the buttons; thanks to Nick for the report; Closes: #462614
+  * reportbug/{submit.py, utils.py}, share/reportbug.el, doc/README.Users,
+    debian/control
+    - MUA handling now done with a OO-style, reworked emacs integration to use
+      emacsclient to reuse an existing emacs instance (if any); thanks to Dan
+      Jacobson for the report and Håkon Stordahl for the patch; Closes: #367298
 
- -- Sandro Tosi <morph@debian.org>  Sun, 03 Jan 2010 20:10:03 +0100
+ -- Sandro Tosi <morph@debian.org>  Mon, 04 Jan 2010 10:01:15 +0100
 
 reportbug (4.9) unstable; urgency=low
 
